[package]
name = "sang_md"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"          # optional but handy for configs
rand = "0.9"
rand_distr = "0.5"
nalgebra = "0.33"         # OR ndarray = "0.16" (pick one)
itertools = "0.14"        # optional
log = "0.4"               # optional
assert-type-eq = "0.1.0"
parameterized = "2.1.0"

[profile.release]
panic = "abort"
