[package]
name = "sang_md"
version = "0.1.0"
edition = "2021"

[lib]
name = "sang_md"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"          # optional but handy for configs
rand = "0.9"
rand_distr = "0.5"
nalgebra = "0.33"         # OR ndarray = "0.16" (pick one)
itertools = "0.14"        # optional
log = "0.4"               # optional
env_logger = "0.11"
assert-type-eq = "0.1.0"
parameterized = "2.1.0"
xdrfile = "0.3.0"
mpi = { version = "0.8", optional = true }
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }

[features]
default = []
mpi = ["dep:mpi"]
python = ["dep:pyo3"]

[profile.release]
panic = "abort"
